# podworm

./: CLAUDE.md  README.md  com.podworm.daily.plist  pyproject.toml
scripts/: daily.sh
src/podworm/: __init__.py  __main__.py  cli.py  config.py  database.py  digest.py  downloader.py  feed_parser.py  spotify.py  transcriber.py
