[project]
name = "podworm"
version = "0.1.0"
description = "Download and transcribe podcasts from 小宇宙 (Xiaoyuzhou) and Spotify"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "ddgs>=9.10.0",
    "feedparser>=6.0.12",
    "deepgram-sdk>=3.0.0",
    "httpx>=0.28.1",
    "rich>=14.3.1",
    "spotipy>=2.23.0",
    "sqlite-utils>=3.39",
    "edge-tts>=7.2.7",
]

[project.scripts]
podworm = "podworm.cli:cli"

[tool.uv]
package = true
